# grid-adventure-v1

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/agent-doc/: action.md  agent.md  entities.md  game_representation.md  grid_adventure_environment.md  gridstate.md  image_observation.md  introduction.md  rendering.md  state.md
docs/agent-guide/: action.md  agent.md  game_representation.md
docs/player-guide/: entities.md  introduction.md  movements.md  objectives.md
grid-adventure-documentation/: mkdocs.yml
grid-adventure-documentation/docs/developer_documentation/: action.md  agent.md  entities.md  game_representation.md  grid_adventure_enviroment.md
grid_adventure/: entities.py  env.py  grid.py  level.py  movements.py  objectives.py  rendering.py
grid_adventure/levels/: intro.py
grid_adventure/play/: editor.py  intro.py
tests/: conftest.py  test_env_level_observation.py  test_grid_step.py  test_image_observation.py  test_specialize_entities.py  test_step_integration.py
